Rename the in-progress constructor to a static method